Reorganizing and restructuring

--- a/.gitignore
+++ b/.gitignore
@@ -22,13 +22,13 @@ sysinfo.txt
 
 # Build Files
 Unity/Assets/Assemblies/*
+Include/DLLMigrate/obj/*
+Include/DLLMigrate/bin/*
 Include/GameLogic/bin/*
 Include/GameLogic/obj/*
 Include/UnityStandalone/obj/*
 Include/UnityStandalone/bin/*
 Server/obj/*
 Server/bin/*
-Client/obj/*
-Client/bin/*
 
 
