--- a/Include/DLLMigrate/DLLMigrate.csproj
+++ b/Include/DLLMigrate/DLLMigrate.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{C85E44B7-EC5B-4137-A587-45D95EA75733}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Client</RootNamespace>
-    <AssemblyName>Client</AssemblyName>
+    <RootNamespace>DLLMigrate</RootNamespace>
+    <AssemblyName>DLLMigrate</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -39,22 +39,22 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Client.cs" />
+    <Compile Include="DLLMigrate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Include\GameLogic\GameLogic.csproj">
+    <ProjectReference Include="..\GameLogic\GameLogic.csproj">
       <Project>{68b2d2cf-de68-4bcc-82b0-d09a99e32a8d}</Project>
       <Name>GameLogic</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Module\MiniUDP\MiniUDP\MiniUDP.csproj">
+    <ProjectReference Include="..\MiniUDP\MiniUDP\MiniUDP.csproj">
       <Project>{2f6bdfff-cf4e-4c97-9ecb-04a4e4282660}</Project>
       <Name>MiniUDP</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Module\RailgunNet\RailgunNet\RailgunNet.csproj">
+    <ProjectReference Include="..\RailgunNet\RailgunNet\RailgunNet.csproj">
       <Project>{71fada64-87b4-4ee9-b36c-7593e3115d84}</Project>
       <Name>RailgunNet</Name>
     </ProjectReference>
